--- a/.github/workflows/build-python-packages.yml
+++ b/.github/workflows/build-python-packages.yml
@@ -124,6 +124,7 @@ jobs:
             7z.exe x "$artifactName" -y | Out-Null
           } else {
             $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
+            shasum -a 256 $artifactName
             tar -xzf $artifactName
           }
         working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
