--- a/.github/workflows/build-python-packages.yml
+++ b/.github/workflows/build-python-packages.yml
@@ -201,6 +201,7 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+            const assert = require('assert');
             const { createHash } = require('node:crypto');
             const hashes = fs.readFileSync('./hashes.sha256', { encoding: 'ascii', flag: 'r' }).split('\n');
             console.log(hashes)
@@ -214,6 +215,9 @@ jobs:
               const data = fs.readFileSync(artifactPath)
               console.log(typeof data)
               hash.update(data)
-              console.log(hash.digest('hex'));
+              const hash_digest = hash.digest('hex').toUpperCase();
+              const hash_line = `${hash_digest} ${artifactName}`;
+              console.log(hash_line);
+              assert(hashes.includes(hash_line));
             }
 
