--- a/.github/workflows/build-python-packages.yml
+++ b/.github/workflows/build-python-packages.yml
@@ -204,20 +204,18 @@ jobs:
             const assert = require('assert');
             const { createHash } = require('node:crypto');
             const hashes = fs.readFileSync('./hashes.sha256', { encoding: 'ascii', flag: 'r' }).split('\n');
-            console.log(hashes)
 
             for (let artifactDir of fs.readdirSync('.')) {
-              const hash = createHash('sha256');
               const isDirectory = fs.lstatSync(artifactDir).isDirectory();
-              const artifactName = isDirectory ? fs.readdirSync(`${artifactDir}`)[0] : artifactDir;
+              const artifactName = isDirectory ? fs.readdirSync(artifactDir)[0] : artifactDir;
               const artifactPath = isDirectory ? `./${artifactDir}/${artifactName}` : `./${artifactName}`
               console.log(`Upload ${artifactName} asset from ${artifactPath}`);
               const data = fs.readFileSync(artifactPath)
-              console.log(typeof data)
-              hash.update(data)
-              const hash_digest = hash.digest('hex').toUpperCase();
-              const hash_line = `${hash_digest} ${artifactName}`;
-              console.log(hash_line);
-              assert(hashes.includes(hash_line));
+              if (artifactName !== 'hashes.sha256') {
+                const hash_digest = createHash('sha256').update(data).digest('hex').toUpperCase();
+                const hash_line = `${hash_digest} ${artifactName}`;
+                console.log(hash_line);
+                assert(hashes.includes(hash_line));
+              }
             }
 
